--- a/mercury/templates/show_todos.html
+++ b/mercury/templates/show_todos.html
@@ -1,5 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
+  {% if session.logged_in %}
+    <form action="{{ url_for('add_todo') }}" method=post class=add-todo>
+      <dl>
+        <dt>Title:
+        <dd><input type=text size=30 name=title>
+        <dt>Description:
+        <dd><textarea name=description rows=5 cols=40></textarea>
+        <dd><input type=submit value=Share>
+      </dl>
+    </form>
+  {% endif %}
   <ul class=todos>
   {% for todo in todos %}
     <li><h2>{{ todo.title }}</h2>{{ todo.description|safe }}
